<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bgColorWall"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llDialogHeader"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/green_800"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:padding="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:fontFamily="@font/tommy_bold"
            android:text="@string/select_language"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/llDialogHeader">

        <TextView
            android:id="@+id/tvEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:text="@string/english_language"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textColor="@color/tvColor"
            android:fontFamily="@font/tommy_regular"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:background="@color/tvColor"
        android:layout_below="@id/llEnglish"/>

    <LinearLayout
        android:id="@+id/llHindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/llEnglish">

        <TextView
            android:id="@+id/tvHindi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:text="@string/hindi_language"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textColor="@color/tvColor"
            android:fontFamily="@font/tommy_regular"/>

    </LinearLayout>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:background="@color/tvColor"
        android:layout_below="@id/llHindi"/>


    <LinearLayout
        android:id="@+id/llUrdu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/llHindi">

        <TextView
            android:id="@+id/tvUrdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:text="@string/urdu_language"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/tommy_regular"/>

    </LinearLayout>-->


</RelativeLayout>